docs/api/qiskit/0.19/qiskit.circuit.library.HGate.mdx
---
title: HGate (v0.19)
description: API reference for qiskit.circuit.library.HGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.HGate
---

# HGate

<Class id="qiskit.circuit.library.HGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/h.py" signature="HGate(label=None)" modifiers="class">
  Single-qubit Hadamard gate.

  This gate is a pi rotation about the X+Z axis, and has the effect of changing computation basis from $|0\rangle,|1\rangle$ to $|+\rangle,|-\rangle$ and vice-versa.

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ H ├
       └───┘
  ```

  **Matrix Representation:**

$$
\begin{split}H = \frac{1}{\sqrt{2}}
\begin{pmatrix}
1 & 1 \\
1 & -1
\end{pmatrix}\end{split}
$$

  Create new H gate.

  ## Attributes

  <span id="hgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.HGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="hgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.HGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="hgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.HGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="hgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.HGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="hgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.HGate.add_decomposition" signature="HGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="hgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.HGate.assemble" signature="HGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="hgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.HGate.broadcast_arguments" signature="HGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="hgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.HGate.c_if" signature="HGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="hgate-control" />

  ### control

  <Function id="qiskit.circuit.library.HGate.control" signature="HGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (multi-)controlled-H gate.

    One control qubit returns a CH gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="hgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.HGate.copy" signature="HGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="hgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.HGate.inverse" signature="HGate.inverse()">
    Return inverted H gate (itself).
  </Function>

  <span id="hgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.HGate.is_parameterized" signature="HGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="hgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.HGate.mirror" signature="HGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="hgate-power" />

  ### power

  <Function id="qiskit.circuit.library.HGate.power" signature="HGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="hgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.HGate.qasm" signature="HGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="hgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.HGate.repeat" signature="HGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="hgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.HGate.to_matrix" signature="HGate.to_matrix()">
    Return a Numpy.array for the H gate.
  </Function>
</Class>

